--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/node": "^22.15.21",
     "https-proxy-agent": "^7.0.5",
     "rimraf": "^6.0.1",
     "socks-proxy-agent": "^8.0.4",
