--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "memo-plugin-manager",
+  "name": "@aim-packages/plugin-manager",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "build": "rimraf ./dist && tsup",
+    "release": "pnpm build && npm publish --registry=https://registry.npmjs.org/ --access public",
     "doc": "typedoc src/index.ts --skipErrorChecking"
   },
   "dependencies": {
